Create unit test for service, add app to docker, improve to Java 17, add exception handling